--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "python -m http.server 8000",
     "local": "powershell -ExecutionPolicy Bypass -File ./scripts/start-local.ps1 -OpenBrowser",
-    "test": "echo \"No tests configured yet\""
+    "test": "echo \"No tests configured yet\"",
+    "proxy": "node ./scripts/proxy.js"
   },
   "keywords": [
     "game",
@@ -18,7 +19,8 @@
   ],
   "author": "",
   "dependencies": {
+    "express": "^5.2.1",
+    "node-fetch": "^2.7.0",
     "tailwindcss": "^3.0.0"
-  },
-  "devDependencies": {}
+  }
 }
